# TDD

./: CMakeLists.txt  README.md
Include/: Bank.h  CurrencysHash.h  Dollar.h  Expression.h  Franc.h  Money.h  Precompile.h  Sum.h
Source/: Bank.cpp  CurrencysHash.cpp  Dollar.cpp  Franc.cpp  Money.cpp  Sum.cpp  main.cpp
WyCash/: CMakeLists.txt  README.md
WyCash/Include/: Bank.h  CurrencysHash.h  Expression.h  Money.h  Precompile.h
WyCash/Source/: Bank.cpp  Money.cpp  main.cpp
WyCash/tests/: CMakeLists.txt
WyCash/tests/Source/: Exchanger.cpp
tests/: CMakeLists.txt
tests/Source/: Exchanger.cpp
xUnit/: CMakeLists.txt  README.md
xUnit/Include/: Precompile.h  TestCase.h  TestResult.h  TestSuite.h  WasRun.h
xUnit/Source/: TestResult.cpp  main.cpp
xUnit/tests/: CMakeLists.txt
xUnit/tests/Include/: TestCaseTest.h  TestFunctions.h
xUnit/tests/Source/: TestCaseTest.cpp  TestFunctions.cpp  UnitTester.cpp
